--- a/static/scss/components/_header.scss
+++ b/static/scss/components/_header.scss
@@ -54,13 +54,6 @@
 .site-title {
     float: left;
     display: block;
-
-    .logo {
-        display: block;
-        background-image: url(../img/logo-white-text.png);
-        width: 240px;
-        height: 80px;
-    }
 }
 
 .header-image {
@@ -73,17 +66,27 @@
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
+    // new
+    display: table;
+    width: 100%;
+
 }
 
 .tint {
     height: 100%;
     z-index: 4;
+    // new
+    width: 100%;
+    display: table-column;
 }
 
 .header-text {
     background: transparent;
-    position: fixed;
+    // position: fixed;
     z-index: 32;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 
     h1 {
         color: $gray-lighter;
@@ -107,6 +110,7 @@
 .navbar-toggle {
         border-color: #ffffff;
         margin-top: 23px;
+        margin-right: 0;
 
     &:hover, &:focus {
         background-color: rgb(233, 238, 241);
@@ -118,5 +122,33 @@
 
     .icon-bar {
         background-color: white;
+    }
+}
+
+.sb-menu {
+
+    margin: 0;
+    list-style-type: none;
+
+    li {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+
+        a {
+            width: 100%;
+            display: inline-block;
+            padding: 1em;
+            color: #f2f2f2;
+
+            &:hover {
+                text-decoration: none;
+                background-color: rgba(255, 255, 255, 0.05);
+                border-right: 3px solid;
+            }
+        }
     }
 }
