--- a/static/scss/pages/_clients.scss
+++ b/static/scss/pages/_clients.scss
@@ -1,12 +1,11 @@
 .clients {
 
     .header-text {
-        top: 25%;
-        left: 39%;
 
         h3 {
             text-align: center;
             width: 235px;
+            margin-right: 6%;
         }
     }
 
