--- a/static/scss/pages/_main.scss
+++ b/static/scss/pages/_main.scss
@@ -6,9 +6,9 @@
     }
 
     .header-text {
-        top: 35%;
+        padding-left: 15%;
         text-align: left;
-        left: 13%;
+        padding-top: 20%;
     }
 
     .tint {
