--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -6,8 +6,8 @@
     }
 
     .header-text {
-        top: 18%;
-        left: 40%;
+        // top: 18%;
+        // left: 40%;
 
         h3 {
             background-color: rgba(34, 34, 34, 0.7);
